--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,110 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.modal-window {
+  max-width: 600px;
+  width: calc(100% - 40px);
+  height: auto;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background: white;
+  padding: 20px;
+  border-radius: 10px;
+}
+.modal-label {
+  color: #c4c4c4;
+  font-family: Roboto, sans-serif;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 19px;
+  display: flex;
+  margin-left: 25px;
+}
+.modal-span {
+  border-radius: 10px;
+  background: #f5f5f5;
+  box-shadow: 2px 8px 15px 0px rgba(201, 201, 201, 0.1);
+  padding: 8.5px 20px 8.5px 25px;
+}
+.modal-container {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+.modal-menu-main {
+  display: flex;
+  gap: 20px;
+  flex-direction: column;
+}
+.fast-option-custom {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.controls-container {
+  display: flex;
+  justify-content: space-between;
+  padding: 0 20px;
+}
+.controls-container-inputs {
+  display: flex;
+  gap: 40px;
+  padding: 10px 0;
+}
+.control-input-search {
+  background-color: hsl(0, 0%, 100%);
+  border-color: hsl(0, 0%, 80%);
+  border-radius: 4px;
+  border-style: solid;
+  border-width: 1px;
+  padding-left: 10px;
+  width: 186px;
+}
+.control-input-search::placeholder {
+  color: hsl(0, 0%, 20%);
+}
+.control-input-search:focus-visible {
+  outline: none;
+  border-color: #2684ff;
+  box-shadow: 0 0 0 1px #2684ff;
+}
+.control-button {
+  border-radius: 7px;
+  background: #434c63;
+  height: 38px;
+  color: #fff;
+  font-family: Roboto, sans-serif;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  padding: 0 20px;
+  border: none;
+  cursor: pointer;
+}
+.control-button:hover {
+  background: #353f57;
+  box-shadow: 0px 0px 20px 0px #232c41 inset;
+}
+.controls-button {
+  display: flex;
+  align-items: center;
+  gap: 40px;
+}
+.control-select {
+  width: 200px;
 }
