--- a/src/index.css
+++ b/src/index.css
@@ -108,3 +108,10 @@ code {
 .control-select {
   width: 200px;
 }
+.semester-date {
+  background-color: hsl(0, 0%, 100%);
+  border-color: hsl(0, 0%, 80%);
+  border-radius: 4px;
+  border-style: solid;
+  border-width: 1px;
+}
